# text_editor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SDL_Utils.h  TextBuffer.cpp  TextBuffer.h  build.sh  main.cpp  mainEditor.cpp  mainEditor.h  utils.cpp  utils.h
